[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decision_tool"
version = "1.0.3"
authors = [
  { name="Ramazan Çevik", email="ramazancevik119266@gmail.com" },
]
description = "Decision analysis package with solution and visualization."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
dependencies = [
  "plotly",
  "scipy",
]

